@@ -59,6 +59,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #23399: pyvenv creates relative symlinks where possible.
+
 - Issue #23099: Closing io.BytesIO with exported buffer is rejected now to
   prevent corrupting exported buffer.
 
